--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,11 @@ env:
     - GOOGLE_CREDENTIALS=${TRAVIS_BUILD_DIR}/credentials.json
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
+script:
+- ls -la
+- pwd
+
+
 install:
 - travis/environment_vars.sh
 - travis/install_gcloud.sh
