--- a/travis/cloudbuild.yaml
+++ b/travis/cloudbuild.yaml
@@ -1,5 +1,10 @@
 steps:
-- name: "gcr.io/dotcms/$REPO_NAME-$BRANCH_NAME-$SHORT_SHA"
-  args: [ 'build', '-t', "gcr.io/dotcms/$REPO_NAME-$BRANCH_NAME-$SHORT_SHA", '--build-arg', 'BUILD_FROM=COMMIT', '--build-arg', "BUILD_ID=$COMMIT_SHA", '.' ]
+- name: "gcr.io/dotcms/dotcms-$TRAVIS_BRANCH-$TRAVIS_COMMIT"
+  env:
+  - 'TRAVIS_BRANCH=$BRANCH_NAME'
+  - 'GOOGLE_PROJECT_ID=$PROJECT_ID'
+  - 'COMMIT_SHA=$TRAVIS_COMMIT'
+
+  args: [ 'build', '-t', "gcr.io/$GOOGLE_PROJECT_ID/dotcms-$TRAVIS_BRANCH-$TRAVIS_COMMIT", '--build-arg', 'BUILD_FROM=COMMIT', '--build-arg', "BUILD_ID=$TRAVIS_COMMIT", '.' ]
 
 timeout: 1800s
