--- a/travis/cloudbuild.yaml
+++ b/travis/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-- name: "gcr.io/dotcms/dotcms-$TRAVIS_BRANCH-$TRAVIS_COMMIT"
+- name: "gcr.io/dotcms/dotcms-$BRANCH_NAME-$COMMIT_SHA"
   env:
-  - 'TRAVIS_BRANCH=$BRANCH_NAME'
-  - 'GOOGLE_PROJECT_ID=$PROJECT_ID'
-  - 'COMMIT_SHA=$TRAVIS_COMMIT'
+  - 'BRANCH_NAME=$BRANCH_NAME'
+  - 'PROJECT_ID=$PROJECT_ID'
+  - 'COMMIT_SHA=$COMMIT_SHA'
 
-  args: [ 'build', '-t', "gcr.io/$GOOGLE_PROJECT_ID/dotcms-$TRAVIS_BRANCH-$TRAVIS_COMMIT", '--build-arg', 'BUILD_FROM=COMMIT', '--build-arg', "BUILD_ID=$TRAVIS_COMMIT", '.' ]
+  args: [ 'build', '-t', "gcr.io/$PROJECT_ID/dotcms-$BRANCH_NAME-$COMMIT_SHA", '--build-arg', 'BUILD_FROM=COMMIT', '--build-arg', "BUILD_ID=$COMMIT_SHA", '.' ]
 
 timeout: 1800s
