--- a/.travis.yml
+++ b/.travis.yml
@@ -29,16 +29,11 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 script:
-- echo `ls -la`
-- echo `pwd`
 
 install:
 - travis/environment_vars.sh
 - travis/install_gcloud.sh
 
 script:
-- echo "TRAVIS_COMMIT : $TRAVIS_COMMIT"
-- echo "TRAVIS_BRANCH : $TRAVIS_BRANCH"
-- echo "GOOGLE_PROJECT_ID : $GOOGLE_PROJECT_ID"
-- gcloud builds submit --config=travis/cloudbuild.yaml --substitutions=BRANCH_NAME=$TRAVIS_BRANCH --substitutions=PROJECT_ID=$GOOGLE_PROJECT_ID --substitutions=COMMIT_SHA=$TRAVIS_COMMIT .
+- gcloud builds submit --config=travis/cloudbuild.yaml --substitutions=BRANCH_NAME=$TRAVIS_BRANCH  --substitutions=COMMIT_SHA=$TRAVIS_COMMIT .
 
